--- a/EMULATOR_v2.html
+++ b/EMULATOR_v2.html
@@ -53,4 +53,4 @@
     oEMU.run();     // run the emulator
 
 </script>
-<div id="dutyCycle_pct"></div>
+<div id="dutyCycle_pct" style=font-family:monospace></div>
