--- a/EMULATOR_v0.html
+++ b/EMULATOR_v0.html
@@ -15,7 +15,7 @@ const oEMU =                       // immediate instantiation of the emulator ob
         setInterval(()=>           // arrow function passes 'this' during callback instead of window object
         {
             this.cpu.cycle();
-            document.write(`interval ${this.i++}: 1 cycle in ${cycleTime_ms}ms<br>`)
+            document.write(`<div style=font-family:monospace>interval ${this.i++}: 1 cycle in ${cycleTime_ms}ms</div>`)
         }, cycleTime_ms );
     }
     ,cpu: { cycle() {} }
